--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "8c95f3d9-4123-452a-b65b-68ae18c69003"
+      "id": "0ae00e55-a499-4650-a35f-9536c534b296"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "c765d4b2-46bc-4d83-bf7f-35c6ceabe36e"
+      "id": "e0372f2a-d659-4be9-995e-194ee9df8ac8"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "a7465219-7cdf-449b-ac52-c5bd7c5a09f4"
+      "id": "bd26b2cb-31c5-431c-b04d-9d5e77aced80"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "3edeec7d-2fd4-4e10-a84b-57ef1f2fe3cd"
+      "id": "1d74980c-45e7-4ba5-9fad-0338ee25720a"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "8fc06f10-0d3b-4d7a-97b0-0bb00bcbcd1d"
+      "id": "a005ca1d-5bab-47c3-a5a2-5097521a1b7f"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "3d04e5ac-bd07-400b-ac0d-702d89e52565"
+      "id": "eb3f8246-85c4-42cf-b654-ccc4cd0bef36"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "88f4303e-0652-4a81-afca-5cda95f8a6dc"
+      "id": "5b213a31-231e-4155-a90d-2c3f83244f98"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "43fc5bd1-00d8-4ed8-96a1-195ca998bd25"
+      "id": "23af1235-fc0c-4f6b-96c8-c1ec72c9d597"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "30cd61a3-bccf-4413-806a-e13897c48b60"
+      "id": "ef86b812-e5af-439c-8cba-cbe43eaf1ac8"
     },
     {
       "cell_type": "code",
@@ -385,11 +385,22 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
+        "    v_{11} & v_{12}  \\\\\n",
+        "    v_{21} & v_{22}  \\\\\n",
+        "    \\dots & \\dots  \\\\\n",
+        "    v_{n1} & v_{n2}  \\\\\n",
+        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
+        "    \\begin{bmatrix}\n",
+        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
+        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
+        "    \\dots \\\\\n",
+        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
+        "    \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "15586ecf-ed7f-46dd-8c3d-f9c209522d35"
+      "id": "b2f07142-d767-4a86-8456-3a400f3ebc30"
     },
     {
       "cell_type": "code",
@@ -412,7 +423,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "36484fca-8f4d-421d-86c7-1e293f763558"
+      "id": "3b7bf4cf-077f-4c84-a84d-bfbb395a5843"
     },
     {
       "cell_type": "code",
@@ -467,7 +478,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "81926653-9160-48ed-9e8f-fe4b3a68c3ab"
+      "id": "4f5040cd-1f04-483a-9100-bf2f1a08bfdd"
     },
     {
       "cell_type": "code",
@@ -514,7 +525,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "a5e6720b-7407-466c-8427-4b8c0a6fc8b4"
+      "id": "853ae20c-b458-4a33-9b6c-9ee857910cc4"
     },
     {
       "cell_type": "code",
@@ -553,7 +564,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "5ccae6ad-af81-4c1b-a4f6-5d0ebcb643cb"
+      "id": "a857ab69-d4b3-4153-8b87-942e90a4747a"
     },
     {
       "cell_type": "code",
@@ -622,7 +633,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "b0c4b188-476d-4a40-87e5-c300a077c38f"
+      "id": "6f3b4442-1807-45cd-9934-8fceff83d54b"
     },
     {
       "cell_type": "code",
@@ -687,7 +698,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "58696f3c-c1fb-4790-b1ee-9a8bfd262fc7"
+      "id": "680f7719-81b4-4d95-8661-194f7e544efd"
     },
     {
       "cell_type": "code",
