--- a/posts/05wk-1.ipynb
+++ b/posts/05wk-1.ipynb
@@ -3065,7 +3065,7 @@
    "id": "afb5b98b-0c92-412f-8bc6-c2add35abe92",
    "metadata": {},
    "source": [
-    "![](https://guebin.github.io/DL2022/posts/III.%20CNN/2022-10-20-8wk-1_files/figure-html/cell-53-output-1.svg)"
+    "![](05wk-1-fig2.svg)"
    ]
   },
   {
@@ -3073,7 +3073,7 @@
    "id": "dcd1f316-19fe-4843-9540-58001bc536a3",
    "metadata": {},
    "source": [
-    "![](https://guebin.github.io/DL2022/posts/III.%20CNN/2022-10-20-8wk-1_files/figure-html/cell-54-output-1.svg)"
+    "![](05wk-1-fig2.svg)"
    ]
   },
   {
@@ -3298,7 +3298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
