--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "34174d31-4ea9-43ba-9cd0-d1ee143e9e36"
+      "id": "e0d4af1c-3530-4f31-8c65-178d2f612669"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "79793caa-619d-4220-bc13-e5ad502f4d20"
+      "id": "dce8458c-aea4-401d-ac00-6e8b5d8e0dae"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "b80090b8-ee84-4eb6-9161-c98088bec0ea"
+      "id": "386d64c6-140e-433e-b5a3-c7ee405be88f"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "1aa3d48b-4196-47d3-bbfb-73b731f5746c"
+      "id": "c679268e-91d3-41e9-8997-a3cf73ce23e6"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "2d8c564a-35de-45eb-865b-3881077600a5"
+      "id": "85d2370a-2e78-49ff-b5ee-dd14c5e1b2d9"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "58b314a4-5b12-4e60-ab78-c89eafb32bde"
+      "id": "84da53d9-981b-4776-a7a9-9033ac5a367c"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "025834e5-b0b4-4863-896f-b8346d6175e7"
+      "id": "0f8b33d6-3c9c-477a-ab11-0ad468eaa00d"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "2fe084c8-070e-4f8c-a077-f83d82fa3d34"
+      "id": "b5406e8e-a933-48ef-a23c-e47b244f5f16"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "d6d6014f-3b41-4f57-8e8c-6ecd7f7fc4e7"
+      "id": "3bad73eb-8644-4e3f-bad8-ded25fdcb8db"
     },
     {
       "cell_type": "code",
@@ -385,22 +385,11 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
-        "    v_{11} & v_{12}  \\\\\n",
-        "    v_{21} & v_{22}  \\\\\n",
-        "    \\dots & \\dots  \\\\\n",
-        "    v_{n1} & v_{n2}  \\\\\n",
-        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
-        "    \\begin{bmatrix}\n",
-        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
-        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
-        "    \\dots \\\\\n",
-        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
-        "    \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "424a60ad-4271-4810-bcb3-e3d5081ca6ee"
+      "id": "01fd566a-7b99-4bbb-86aa-5219ef6cb0ca"
     },
     {
       "cell_type": "code",
@@ -423,7 +412,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "47e9c313-1e14-410c-b818-80108b116cca"
+      "id": "0d6a3e6e-fa34-4cec-bc49-fcf062573eda"
     },
     {
       "cell_type": "code",
@@ -478,7 +467,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "4226176b-398e-4bc6-a221-c982df7bda80"
+      "id": "4eae6baf-9498-4c9c-80b3-ad444fc5772a"
     },
     {
       "cell_type": "code",
@@ -525,7 +514,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "24a1fde3-9275-405f-b526-bce48a847fa1"
+      "id": "a3ad8a9f-6f40-41a8-a20b-c3b57b58893d"
     },
     {
       "cell_type": "code",
@@ -564,7 +553,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "80db488e-acb9-4c2a-b6f1-b5dee7297e27"
+      "id": "eb976f91-4b28-4b66-bea5-6e905bf245d0"
     },
     {
       "cell_type": "code",
@@ -633,7 +622,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "5626245c-a7b5-4ca9-a076-299de08971ea"
+      "id": "fa66bc54-90a8-4b9d-9277-ecf9534ef4c4"
     },
     {
       "cell_type": "code",
@@ -698,7 +687,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "3373c851-18e1-4b8c-96eb-8b6f54c2df00"
+      "id": "25350306-e417-4456-b2c9-948b477fa230"
     },
     {
       "cell_type": "code",
