--- a/docs/posts/06wk-1.out.ipynb
+++ b/docs/posts/06wk-1.out.ipynb
@@ -13,11 +13,11 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "7ae892f8-c7ad-485e-86dd-30f4cdd2ec7f"
+      "id": "25cfc104-09c8-49be-8eda-ec5b5f28c13d"
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 674,
       "metadata": {
         "tags": []
       },
@@ -33,11 +33,11 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "e19f2cc0-ce00-4e0e-a84a-900fdad30314"
+      "id": "31dbe966-900f-4167-8093-5f907f7a8aa2"
     },
     {
       "cell_type": "code",
-      "execution_count": 184,
+      "execution_count": 675,
       "metadata": {
         "tags": []
       },
@@ -57,9 +57,119 @@
       "source": [
         "# 3. torch.eigensum\n",
         "\n",
+        "## A. transpose"
+      ],
+      "id": "02fc769e-203b-4bb3-987c-f8dac272fd14"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 633,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "tsr = torch.arange(12).reshape(4,3)\n",
+        "tsr"
+      ],
+      "id": "fa3d65ef-9547-4b80-96c1-442457d0e23a"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 634,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "tsr.t()"
+      ],
+      "id": "01bb899f-b74e-4754-93d3-df0be29348d8"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 635,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "torch.einsum('ij->ji',tsr)"
+      ],
+      "id": "18265793-22d8-4daa-9164-58d3f656e9cc"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## B. 행렬곱"
+      ],
+      "id": "b51327bc-a638-4cc8-b13f-040aedd7f20b"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 623,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "tsr1 = torch.arange(12).reshape(4,3).float()\n",
+        "tsr2 = torch.arange(15).reshape(3,5).float()"
+      ],
+      "id": "87678d33-7443-430a-bb1b-8969b398c792"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 624,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "tsr1.shape"
+      ],
+      "id": "701aaf62-9245-44e0-8c5b-a82726e2ddaf"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 625,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "tsr2.shape"
+      ],
+      "id": "3efc65bc-8115-4304-a74a-add116f4ca1c"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 626,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "tsr1 @ tsr2"
+      ],
+      "id": "07a4f7c8-d189-4f1e-afdd-f04c3e15a3e1"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 627,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "torch.einsum('ij,jk -> ik',tsr1,tsr2) "
+      ],
+      "id": "0b01990c-424f-49ec-8c53-22d9fde57c88"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# 4. MNIST – 직접설계"
       ],
-      "id": "517f2a9d-3c33-416c-962a-891d1833d3f1"
+      "id": "0b87bdbd-ea7a-4a9e-868a-0f201cc08e97"
     },
     {
       "cell_type": "code",
@@ -85,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 201,
+      "execution_count": 620,
       "metadata": {
         "tags": []
       },
@@ -94,18 +204,18 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "torch.Size([18623, 1, 28, 28])   torch.float32\n",
-            "torch.Size([18623, 3])       torch.float32\n",
-            "torch.Size([3147, 1, 28, 28])    torch.float32\n",
-            "torch.Size([3147, 3])        torch.float32"
+            "torch.Size([50000, 3, 32, 32])   torch.float32\n",
+            "torch.Size([50000])              torch.int64\n",
+            "torch.Size([10000, 3, 32, 32])   torch.float32\n",
+            "torch.Size([10000])              torch.int64"
           ]
         }
       ],
       "source": [
         "print(X.shape,'\\t',X.dtype)\n",
-        "print(y.shape,'\\t\\t',y.dtype)\n",
+        "print(y.shape,'\\t\\t\\t',y.dtype)\n",
         "print(XX.shape,'\\t',XX.dtype)\n",
-        "print(yy.shape,'\\t\\t',yy.dtype)"
+        "print(yy.shape,'\\t\\t\\t',yy.dtype)"
       ],
       "id": "d8912eed-0678-4f17-8ceb-e15fb1e50f84"
     },
@@ -135,7 +245,7 @@
       "source": [
         "## A. y: (n,3)-float"
       ],
-      "id": "8bbda85f-a4be-4197-949f-8652fe4a9f52"
+      "id": "d29cc391-eba8-4783-b6e5-cd67dc15bec6"
     },
     {
       "cell_type": "code",
@@ -198,7 +308,7 @@
       "source": [
         "## B. y: (n,)-int"
       ],
-      "id": "df16d651-19ee-4a02-bc0b-298e61c5bc8f"
+      "id": "d047ed39-2e04-4bed-8b33-376ffcce37dd"
     },
     {
       "cell_type": "code",
@@ -303,7 +413,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "d9186ab9-d755-4fe4-8452-ad305d7a090a"
+      "id": "290b830a-1381-4aa7-878a-297260246cb8"
     },
     {
       "cell_type": "code",
@@ -376,7 +486,7 @@
       "source": [
         "## A. torch"
       ],
-      "id": "b2637f28-0859-43ca-8d85-96baef164570"
+      "id": "b0e21e61-f640-4623-aed1-2c70971d6eb7"
     },
     {
       "cell_type": "code",
@@ -439,7 +549,7 @@
       "source": [
         "## B. fastai"
       ],
-      "id": "4b4dce60-2ae0-432e-914d-8c6a6a5f8954"
+      "id": "1c4176e9-753b-4f5f-9e72-f48fdfc4aae0"
     },
     {
       "cell_type": "code",
@@ -501,17 +611,107 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 6. CIFAR10 – transfer\n",
+        "# 6. ImageNet – 직접설계/transfer\n",
+        "\n",
+        "## A. 알렉스넷(Krizhevsky, Sutskever, and Hinton 2012)의 의미\n",
+        "\n",
+        "`-` 야사로 배우는 인공지능: <https://brunch.co.kr/@hvnpoet/109>\n",
+        "\n",
+        "## B. 알렉스넷의 아키텍처 써보기\n",
+        "\n",
+        "`-` 알렉스넷의 아키텍처:\n",
+        "\n",
+        "-ref:\n",
+        "<https://upload.wikimedia.org/wikipedia/commons/thumb/c/cc/Comparison_image_neural_networks.svg/960px-Comparison_image_neural_networks.svg.png>\n",
+        "\n",
+        "![](https://upload.wikimedia.org/wikipedia/commons/thumb/c/cc/Comparison_image_neural_networks.svg/960px-Comparison_image_neural_networks.svg.png)\n",
+        "\n",
+        "`-` 재미삼아 써보면.."
+      ],
+      "id": "11551ad5-e7f9-4d85-a58f-0447cdec5fef"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 737,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "img = torch.zeros(1,3*227*227).reshape(1,3,227,227)\n",
+        "img.shape"
+      ],
+      "id": "cd8bd6aa-9004-4cd6-9642-d2f121fd06b8"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 747,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "net = torch.nn.Sequential(\n",
+        "    torch.nn.Conv2d(3,96,kernel_size=(11,11),stride=4),\n",
+        "    torch.nn.ReLU(),    \n",
+        "    torch.nn.MaxPool2d((3,3),stride=2), # default stride는 3\n",
+        "    torch.nn.Conv2d(96,256,kernel_size=(5,5),padding=2),\n",
+        "    torch.nn.ReLU(),\n",
+        "    torch.nn.MaxPool2d((3,3),stride=2), # default stride는 3\n",
+        "    torch.nn.Conv2d(256,384,kernel_size=(3,3),padding=1),\n",
+        "    torch.nn.ReLU(),\n",
+        "    torch.nn.Conv2d(384,384,kernel_size=(3,3),padding=1),\n",
+        "    torch.nn.ReLU(),    \n",
+        "    torch.nn.Conv2d(384,256,kernel_size=(3,3),padding=1),\n",
+        "    torch.nn.ReLU(),    \n",
+        "    torch.nn.MaxPool2d((3,3),stride=2),\n",
+        "    torch.nn.Flatten(),\n",
+        "    torch.nn.Linear(9216,4096),\n",
+        "    torch.nn.ReLU(),\n",
+        "    torch.nn.Dropout(0.5),\n",
+        "    torch.nn.Linear(4096,4096),        \n",
+        "    torch.nn.ReLU(),\n",
+        "    torch.nn.Dropout(0.5),    \n",
+        "    torch.nn.Linear(4096,1000),\n",
+        ")"
+      ],
+      "id": "bdd5f796-6695-480b-8ed6-df39a04ea845"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## C. 알렉스넷으로 ImageNet 적합 – HW"
+      ],
+      "id": "6172512d-0cdc-4006-8516-a3a4d764a61b"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 748,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "pass"
+      ],
+      "id": "f6a4287e-c7fc-40e2-8291-28dafb5bd0f7"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 7. CIFAR10 – transfer\n",
         "\n",
         "## A. `dls` 만들자\n",
         "\n",
         "`-` X,y를 얻자."
       ],
-      "id": "52813c15-a82d-4746-8dd6-ea84315a5d91"
+      "id": "575fc6db-dfb1-45b8-8928-9fcea637e492"
     },
     {
       "cell_type": "code",
-      "execution_count": 285,
+      "execution_count": 642,
       "metadata": {
         "tags": []
       },
@@ -524,7 +724,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 446,
+      "execution_count": 643,
       "metadata": {
         "tags": []
       },
@@ -537,7 +737,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 456,
+      "execution_count": 644,
       "metadata": {
         "tags": []
       },
@@ -552,7 +752,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 457,
+      "execution_count": 645,
       "metadata": {
         "tags": []
       },
@@ -582,7 +782,7 @@
       "source": [
         "`-` 데이터를 시각화해보자."
       ],
-      "id": "908ce15c-d503-4ca2-a5bc-27f4323cc806"
+      "id": "e1e95782-db77-4253-b06d-f46f5933d69c"
     },
     {
       "cell_type": "code",
@@ -616,7 +816,7 @@
         "\n",
         "`-` 아무튼 dls를 만들자."
       ],
-      "id": "6b671f18-d129-4bf7-87e1-d214bdcd5389"
+      "id": "8d650533-c68b-4a9d-bdc2-eb6017653f0e"
     },
     {
       "cell_type": "code",
@@ -640,7 +840,7 @@
       "source": [
         "`-` 아래와 같이 쉽게 만들수도있음…"
       ],
-      "id": "6043cf15-44e1-4b16-bbca-4813c0fcec2e"
+      "id": "29b55876-15d2-4895-aebd-0805b6de4fb6"
     },
     {
       "cell_type": "code",
@@ -663,7 +863,7 @@
         "\n",
         "`-` 시도1: 이게 좀 힘들어요 ㅎㅎ"
       ],
-      "id": "07abe347-459b-419d-af3a-e9aade676232"
+      "id": "3454a534-c271-4d61-ad53-06e907bc49fa"
     },
     {
       "cell_type": "code",
@@ -727,7 +927,7 @@
         "\n",
         "`-` 시도2: 셔플!"
       ],
-      "id": "2c1d6d32-8792-46c8-9ef4-fd54a2358865"
+      "id": "ac364795-03a3-47de-b8f4-89d41010e679"
     },
     {
       "cell_type": "code",
@@ -789,7 +989,7 @@
       "source": [
         "`-` 시도3: 복잡하게.."
       ],
-      "id": "5e52d3ff-ff1b-4691-ba9a-6c59d5c07dc4"
+      "id": "a91ba592-4b0d-4052-9136-81b068ec4a9b"
     },
     {
       "cell_type": "code",
@@ -855,7 +1055,7 @@
         "\n",
         "`-` ResNet18을 다운로드"
       ],
-      "id": "7cb12701-f3fa-477f-8b1a-73761e241505"
+      "id": "e4187468-2dcf-4fdf-a206-3a64dedeeec5"
     },
     {
       "cell_type": "code",
@@ -885,7 +1085,7 @@
       "source": [
         "`-` 마지막의 레이어만 수정"
       ],
-      "id": "77a7a8b2-1e4d-4bc1-bd68-0da9f2ffcf18"
+      "id": "8d786d1b-a5ec-4dc9-acf1-803a47749622"
     },
     {
       "cell_type": "code",
@@ -905,7 +1105,7 @@
       "source": [
         "`-` 학습해보자."
       ],
-      "id": "b1a0b6a6-48a1-4637-b111-c55fa4077dc4"
+      "id": "be833700-4e9d-4c76-a247-08d4d22e52b9"
     },
     {
       "cell_type": "code",
@@ -955,7 +1155,7 @@
       "source": [
         "`-` 좀 더 fastai에 가깝게.."
       ],
-      "id": "97ebfd6b-fbb4-4161-b7fb-30162d68ba8a"
+      "id": "133d4bae-54d0-42ef-bfd7-8dc36bc1f6d4"
     },
     {
       "cell_type": "code",
@@ -987,8 +1187,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 7. CNN은 왜 강한가\n",
-        "\n",
         "# A1. 자잘한 용어 정리 ($\\star$)\n",
         "\n",
         "## A. 지도학습\n",
@@ -1219,11 +1417,15 @@
         "    지칭한다면 거의 DNN을 의미한다고 봐도 무방하다. 즉 ANN $\\approx$ MLP\n",
         "    $\\approx$ DNN 라고 보면 된다. (엄밀하게는 틀린개념이죠)\n",
         "\n",
+        "Krizhevsky, Alex, Ilya Sutskever, and Geoffrey E Hinton. 2012. “Imagenet\n",
+        "Classification with Deep Convolutional Neural Networks.” *Advances in\n",
+        "Neural Information Processing Systems* 25.\n",
+        "\n",
         "[1] 그렇지만 이걸 ANN이라고 부르는 사람은 없는듯\n",
         "\n",
         "[2] 저는 이 표현 너무 싫어해요"
       ],
-      "id": "98080cf6-bd0d-4383-b3c6-01bb2fe98b3b"
+      "id": "3e41be16-29aa-415c-a707-6179d44d0d53"
     }
   ],
   "nbformat": 4,
