--- a/posts/ref.bib
+++ b/posts/ref.bib
@@ -23,3 +23,11 @@
   year={1962},
   publisher={Spartan books Washington, DC}
 }
+
+@article{krizhevsky2012imagenet,
+  title={Imagenet classification with deep convolutional neural networks},
+  author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+  journal={Advances in neural information processing systems},
+  volume={25},
+  year={2012}
+}
